--- a/index.html
+++ b/index.html
@@ -1,6 +1,38 @@
-    <script language="javascript"> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Social Media Engagement Tool</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Boost Your Social Media Engagement!</h1>
+    </header>
+    <main>
+        <section class="content">
+            <p>Want more followers and likes? Click a button below to get started!</p>
+            <button id="getFollowersButton" class="tiktok-btn">Get TikTok Followers</button>
+            <button id="getLikesButton" class="tiktok-btn">Get TikTok Likes</button>
+            <button id="getInstaLikesButton" class="insta-btn">Get Instagram Likes</button>
+            <button id="getFbFollowersButton" class="fb-btn">Get Facebook Followers</button>
+        </section>
+    </main>
 
-var enkripsi="'1A'03FMAV[RG'02jvon'1G'2C'1Ajvon'02ncle'1F'00gl'00'1G'2C'1Ajgcf'1G'2C'02'02'02'02'1Aogvc'02ajcpqgv'1F'00WVD/:'00'1G'2C'02'02'02'02'1Aogvc'02lcog'1F'00tkgurmpv'00'02amlvglv'1F'00ukfvj'1Ffgtkag/ukfvj'0A'02klkvkcn/qacng'1F3,2'00'1G'2C'02'02'02'02'1Avkvng'1GQmakcn'02Ogfkc'02Glecegoglv'02Vmmn'1A-vkvng'1G'2C'02'02'02'02'1Ankli'02pgn'1F'00qv{ngqjggv'00'02jpgd'1F'00qv{ngq,aqq'00'1G'2C'1A-jgcf'1G'2C'1A`mf{'1G'2C'02'02'02'02'1Ajgcfgp'1G'2C'02'02'02'02'02'02'02'02'1Aj3'1G@mmqv'02[mwp'02Qmakcn'02Ogfkc'02Glecegoglv'03'1A-j3'1G'2C'02'02'02'02'1A-jgcfgp'1G'2C'02'02'02'02'1Aockl'1G'2C'02'02'02'02'02'02'02'02'1Aqgavkml'02ancqq'1F'00amlvglv'00'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1Ar'1GUclv'02ompg'02dmnnmugpq'02clf'02nkigq'1D'02Ankai'02c'02`wvvml'02`gnmu'02vm'02egv'02qvcpvgf'03'1A-r'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1A`wvvml'02kf'1F'00egvDmnnmugpq@wvvml'00'02ancqq'1F'00vkivmi/`vl'00'1GEgv'02VkiVmi'02Dmnnmugpq'1A-`wvvml'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1A`wvvml'02kf'1F'00egvNkigq@wvvml'00'02ancqq'1F'00vkivmi/`vl'00'1GEgv'02VkiVmi'02Nkigq'1A-`wvvml'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1A`wvvml'02kf'1F'00egvKlqvcNkigq@wvvml'00'02ancqq'1F'00klqvc/`vl'00'1GEgv'02Klqvcepco'02Nkigq'1A-`wvvml'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1A`wvvml'02kf'1F'00egvD`Dmnnmugpq@wvvml'00'02ancqq'1F'00d`/`vl'00'1GEgv'02Dcag`mmi'02Dmnnmugpq'1A-`wvvml'1G'2C'02'02'02'02'02'02'02'02'1A-qgavkml'1G'2C'02'02'02'02'1A-ockl'1G'2C'2C'02'02'02'02'1Afkt'02kf'1F'00omfcn'00'02ancqq'1F'00jkffgl'00'1G'2C'02'02'02'02'02'02'02'02'1Afkt'02ancqq'1F'00omfcn/amlvglv'00'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1Aj0'1GMmrq'03'02[mw'05tg'02`ggl'02rpcligf'03'1A-j0'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1Ar'1GVjkq'02kq'02hwqv'02dmp'02dwl'03'02Lm'02pgcn'02dmnnmugpq'02mp'02nkigq'02cpg'02amokle'02{mwp'02uc{'03'1A-r'1G'2C'02'02'02'02'02'02'02'02'02'02'02'02'1A`wvvml'02kf'1F'00anmqgOmfcn@wvvml'00'1GEmv'02kv'03'1A-`wvvml'1G'2C'02'02'02'02'02'02'02'02'1A-fkt'1G'2C'02'02'02'02'1A-fkt'1G'2C'2C'02'02'02'02'1Admmvgp'1G'2C'02'02'02'02'02'02'02'02'1Ar'1G'C;'020207'02`{'02NKEJV'02[CECOK'02'5A'02Ocfg'02ukvj'02'w0546'wDG2D'02'03'1A-r'1G'2C'02'02'02'02'1A-dmmvgp'1G'2C'2C'02'02'02'02'1Acwfkm'02kf'1F'00rpcliQmwlf'00'02qpa'1F'00{mwp/qmwlf/dkng,or1'00'1G'1A-cwfkm'1G'2C'02'02'02'02'1Aqapkrv'02qpa'1F'00qapkrv,hq'00'1G'1A-qapkrv'1G'2C'1A-`mf{'1G'2C'1A-jvon'1G"; teks=""; teksasli="";var panjang;panjang=enkripsi.length;for (i=0;i<panjang;i++){ teks+=String.fromCharCode(enkripsi.charCodeAt(i)^2) }teksasli=unescape(teks);document.write(teksasli);
-</script>
-<script src="https://raviral.com/host_style/style/js-track/track.js"></script> 
+    <div id="modal" class="hidden">
+        <div class="modal-content">
+            <h2>Oops! You've been pranked!</h2>
+            <p>This is just for fun! No real followers or likes are coming your way!</p>
+            <button id="closeModalButton">Got it!</button>
+        </div>
+    </div>
 
+    <footer>
+        <p>© 2025 by LIGHT YAGAMI | Made with ❤️ !</p>
+    </footer>
+
+    <audio id="prankSound" src="your-sound-file.mp3"></audio>
+    <script src="script.js"></script>
+</body>
+</html>
